14.11.2011:
        - Fixed: Do not clear midi ports upon 'new' (template) or 'import midi'. (Tim)
          Enabled some old code with which I had problems before, but that was long before 'clearing' fixes. 
          Remaining TODOS: 'New' Synth.med template still replaces existing midi ports, and only
           the first port appears to be auto-connected to inputs upon import midi.
13.11.2011:
        - ScoreEdit now saves some default init values (flo)
        - seems like this fixed some valgrind bugs as well (flo)
12.11.2011:
        - fixed "newly created subwins aren't focussed" problem (flo)
        - when closing a subwin, automatically another (topmost) subwin 
          gets activated (flo)
        - fixed "non-subwin topwin-states aren't restored when using
          'muse2 songfile.med'. (don't know who, probably Tim)
11.11.2011:
        -  Fixed all template .med song files. (Tim)
10.11.2011:
        - Updated spanish translation by Cristian Ramos (rj)
        - Fixed meters not updating upon vertically shrinking arranger. (Tim)
        - Fixed TopWin xml errors such as "MusE: unknown tag <topwin [or tool or arranger] > at line xxxx". (Tim)
          Used new TopLevelList::findType() in MusE::readToplevels() to find arranger, marker, and cliplist. Was broken !
          So, arranger now remembers its settings (mostly).
          TODO: Fix broken default.med file, has serious xml errors. For long time MarkerView hasn't recalled its visibility.
09.11.2011: 
        - Further to 02.11.2011: Automatically convert old songs to use new 'fluid_synth' name.  (Tim...)
        - Added enum Synth::Type (MESS_SYNTH, DSSI_SYNTH etc) and used it throughout, ex. in findSynth(), also in song file.
          Protects from name conflicts with future MESS, DSSI synths, and simplifies adding future types (say LV2 etc.)
        - Simplified populateAddSynth(), made it agnostic. No more hard-coded synth type sorting - uses Synth::Type now. 